# void

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cabal.project  flake.nix  glados.cabal
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: 01_epic.yml  02_story.yml  03_task.yml  04_bug.yml  05_technical_debt.yml  addon_from_discussion.yml  addon_link_pr.yml  addon_priority.yml  addon_relationship.yml  addon_repro_snippets.yml  bug_report.yml  config.yml  epic.yml  feature_request.yml  regression.yml  sub_issue.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  cleanup.md  feature.md
.github/workflows/: auto-labeler.yml  build.yml  cabal-dump.yml  issue-linker.yml  mirror_commit.yaml  pr-labelers.yml  pr-status-sync.yml  release.yml
ast/src/: AST.hs
cabal-extract/: Main.hs  cabal-extract.cabal
cli/: cli.cabal
cli/src/: Main.hs
compiler/: compiler.cabal
compiler/app/: Main.hs
compiler/src/: Compiler.hs
eval/src/: Evaluator.hs
lisp/: Bootstrap.hs  Main.hs  bootstrap.ghci  bootstrap.hs  lisp.cabal
lisp/app/: Main.hs
lisp/src/: Ast.hs  Bootstrap.hs  Evaluator.hs  Lisp.hs  SexprtoAST.hs
lisp/src/parsing/: Parser.hs
lisp/tests/: ComplexExamplesSpec.hs  EvaluatorSpec.hs  IntegrationSpec.hs  LispAstSpec.hs  LispBootstrapSpec.hs  LispSpec.hs  Main.hs  SexprtoASTSpec.hs  SpecIntegration.hs  SpecLisp.hs  SpecParser.hs
lisp/tests/fixtures/: complex.lisp  testProcName.ss
lisp/tests/fixtures/assignment-samples/: factorial.scm  superior.scm
poc/: MegaparsecPoC.hs  ParsecPoC.hs  SpecMegaparsec.hs  SpecParsec.hs  poc.cabal  poc.md
scripts/: apply-commit-convention.py  cabal-bump.py
tests/: LispSpec.hs
