cabal-version: 3.8
name: glados

version: 0.0.0.1
build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wextra
    -Wredundant-constraints
    -Wname-shadowing

common release
  ghc-options:
    -O2

executable lisp-interpreter
  import: warnings
  import: release

  main-is: Main.hs
  build-depends:
    base >=4.15.0.0

  hs-source-dirs: lisp
  default-language: Haskell2010
