cabal-version: 3.8
name:          cabal-extract
version:       0.0.1
build-type:    Simple
description:   Extract cabal build-depends informations
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

executable cabal-extract
  import:         lang
  import:         warnings
  import:         release
  main-is:        Main.hs
  hs-source-dirs: .
  build-depends:
    , base          >=4.7 && <5
    , Cabal
    , Cabal-syntax
    , directory
    , filepath
    , regex-tdfa
