cabal-version: 3.8
name:          cli
version:       0.0.1
build-type:    Simple
description:   Generic Language and data operand syntax
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

executable cli
  import:         lang
  import:         warnings
  import:         release
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    , base
    , compiler
    , lisp
    , optparse-applicative
    , process
