cabal-version: 3.8
name:          compiler
version:       0.0.1
build-type:    Simple
description:   Generic Language and data operand syntax
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

library
  import:          lang
  import:          warnings
  import:          release
  hs-source-dirs:  src
  exposed-modules: Compiler
  build-depends:
    , ast:ast-lib
    , base
    , optparse-applicative

executable compiler-exe
  import:         lang
  import:         warnings
  import:         release
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , ast:ast-lib
    , base
    , compiler
    , optparse-applicative

test-suite compiler-test
  import:         lang
  import:         warnings
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: tests
  build-depends:
    , ast:ast-lib
    , base                >=4.7 && <5
    , directory
    , hspec
    , hspec-expectations
