cabal-version: 3.8
name:          lisp
version:       0.0.1
build-type:    Simple
description:   Generic Language and data operand syntax
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common extensions
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings

common release
  ghc-options: -O2

library
  import:          lang
  import:          warnings
  import:          extensions
  exposed-modules: Lisp
  build-depends:
    , ast
    , base
    , eval
    , optparse-applicative
    , parser

  hs-source-dirs:  src src/parsing

executable lisp-interpreter
  import:         lang
  import:         warnings
  import:         extensions
  import:         release
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , lisp
    , optparse-applicative

test-suite lisp-interpreter-test
  import:         lang
  import:         warnings
  import:         extensions
  type:           exitcode-stdio-1.0
  main-is:        SpecLisp.hs
  other-modules:  SpecIntegration
  hs-source-dirs: tests
  build-depends:
    , ast
    , base                >=4.7 && <5
    , directory
    , eval
    , hspec
    , hspec-expectations
    , lisp
    , mtl
    , parser
    , silently
