cabal-version: 3.8
name:          poc
version:       0.0.1
build-type:    Simple
description:   Proof of concept modules for parser experiments
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

library
  import:          lang
  import:          warnings
  exposed-modules:
    MegaparsecPoC
    ParsecPoC

  hs-source-dirs:  .
  build-depends:
    , base
    , megaparsec
    , parsec

test-suite parsec-test
  import:         lang, warnings
  type:           exitcode-stdio-1.0
  main-is:        SpecParsec.hs
  hs-source-dirs: .
  other-modules:  ParsecPoC
  build-depends:
    , base                >=4.7 && <5
    , hspec
    , hspec-expectations
    , parsec

test-suite megaparsec-test
  import:         lang, warnings
  type:           exitcode-stdio-1.0
  main-is:        SpecMegaparsec.hs
  hs-source-dirs: .
  other-modules:  MegaparsecPoC
  build-depends:
    , base                >=4.7 && <5
    , hspec
    , hspec-expectations
    , megaparsec
